--- a/Convert.html
+++ b/Convert.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-    <script type="text/javascript" src="/GhostJSONToWPXML.js"></script>
+    <script type="text/javascript" src="GhostJSONToWPXML.js"></script>
 
     <label for="jsonText"> JSON Text </label>
     <textarea id="jsonText" rows="5"></textarea>
